--- a/Odoo/pubspec.yaml
+++ b/Odoo/pubspec.yaml
@@ -29,9 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider:
+  dio:
   http:
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   flutter_launcher_icons: "^0.9.2"
   # The "flutter_lints" package below contains a set of recommended lints to
